--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "lambdish/phunctional": "^2.1",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "symfony/messenger": "^6.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -23,6 +25,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Tickets\\": "src/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
