--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "php-open-source-saver/jwt-auth": "^2.0",
         "symfony/messenger": "^6.0"
     },
     "require-dev": {
