--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -15,6 +15,7 @@
         "symfony/messenger": "^6.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
