--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "endroid/qr-code": "^4.7",
         "guzzlehttp/guzzle": "^7.2",
         "lambdish/phunctional": "^2.1",
         "laravel/framework": "^9.19",
