--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen          8083;
-    server_name     api.tickets.loc;
+    server_name     api.solarsysto.ru;
 
     # Set the document root of the project
     root /var/www/html/public;
@@ -26,7 +26,7 @@ server {
 server {
     # Set the port to listen on and the server name
     listen          8083;
-    server_name     admin.ticket.loc;
+    server_name     org.solarsysto.ru;
 
     # Specify the default character set
     charset utf-8;
