--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen          8083;
-    server_name     api.solarsysto.ru;
+    server_name     api.solarsysto.ru api.tickets.loc;
 
     # Set the document root of the project
     root /var/www/html/public;
@@ -26,7 +26,7 @@ server {
 server {
     # Set the port to listen on and the server name
     listen          8083;
-    server_name     org.solarsysto.ru;
+    server_name     org.solarsysto.ru org.tickets.loc;
 
     # Specify the default character set
     charset utf-8;
@@ -35,6 +35,6 @@ server {
         # Set the document root of the project
         root /var/app/dist;
         # Set the directory index files
-        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 }
