--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,20 @@ services:
     networks:
       - backend
 
+  worker:
+    build:
+      context: ./Docker/worker
+    image: 'laravelworker'
+    volumes:
+      - ./Backend:/var/www/html
+      - ./Docker/php/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ./Docker/php/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
+      - ./Docker/worker/conf/supervisord.conf:/etc/supervisor/conf.d/supervisord.conf
+    user: user
+    command: [ "supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf" ]
+    networks:
+      - backend
+
   mysql:
     image: mysql:8
     ports:
