--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "php-open-source-saver/jwt-auth": "^2.0",
+        "sentry/sentry-laravel": "^3.2",
         "symfony/messenger": "^6.0"
     },
     "require-dev": {
