увиличил timeout на supervisord.conf

--- a/Docker/worker/conf/supervisord.conf
+++ b/Docker/worker/conf/supervisord.conf
@@ -11,5 +11,6 @@ autostart=true
 autorestart=true
 user=user
 numprocs=2
+timeout=60*60
 redirect_stderr=true
 stdout_logfile=/tmp/supervisor_EuroAuto_create-order.log
