--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -1,7 +1,8 @@
 server {
-    listen          8083;
+    listen          8443 ssl;
     server_name     api.solarsysto.ru api.tickets.loc;
-
+    ssl_certificate ssl/fullchain2.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey2.pem;
     # Set the document root of the project
     root /var/www/html/public;
     index           index.php;
@@ -24,10 +25,16 @@ server {
 }
 
 server {
+    listen 8083;
+    server_name     org.solarsysto.ru api.solarsysto.ru api.tickets.loc org.tickets.loc;
+    return 301 https://$host$request_uri;
+}
+server {
     # Set the port to listen on and the server name
-    listen          8083;
+    listen          8443 ssl;
     server_name     org.solarsysto.ru org.tickets.loc;
-
+    ssl_certificate ssl/fullchain2.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey2.pem;
     # Specify the default character set
     charset utf-8;
 
