--- a/Docker/worker/Dockerfile
+++ b/Docker/worker/Dockerfile
@@ -35,8 +35,8 @@ COPY vhost.conf /etc/apache2/sites-available/000-default.conf
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-RUN pecl install xdebug \
-    && docker-php-ext-enable xdebug
+#RUN pecl install xdebug \#
+#    && docker-php-ext-enable xdebug
 
 #
 RUN adduser --disabled-password --gecos "" user
