--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,10 @@ services:
       context: ./Docker/nginx
     ports:
       - "80:8083"
+      - "443:8443"
     volumes:
       - ./Docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./Docker/nginx/ssl:/etc/nginx/ssl
       - ./Docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./Docker/nginx/proxy_params:/etc/nginx/proxy_params
       - ./Backend:/var/www/html
