добавил baza в систему

--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -45,3 +45,26 @@ server {
         try_files $uri $uri/ /index.html;
     }
 }
+
+server {
+    listen          8083;
+    server_name     baza.tickets.loc;
+
+    root /var/baza;
+    index index.php index.html;
+
+    location / {
+        try_files $uri /index.php$is_args$query_string;
+    }
+
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass phpBaza:9000;
+        fastcgi_index index.php?$args;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME /var/baza$fastcgi_script_name;
+        fastcgi_intercept_errors off;
+        fastcgi_buffer_size 16k;
+        fastcgi_buffers 4 16k;
+    }
+}
