--- a/Friendly/.env.example
+++ b/Friendly/.env.example
@@ -12,7 +12,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=friendly
 DB_USERNAME=root
-DB_PASSWORD=common404
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
