modife supervisord.conf

--- a/Docker/worker/conf/supervisord.conf
+++ b/Docker/worker/conf/supervisord.conf
@@ -4,7 +4,7 @@ loglevel=info
 logfile=/tmp/supervisord.log
 pidfile=/tmp/supervisord.pid
 
-[program:laravel-worker]
+[program:laravel-worker-systo]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/html/artisan queue:work
 autostart=true
@@ -13,4 +13,16 @@ user=user
 numprocs=1
 timeout=60*60
 redirect_stderr=true
-stdout_logfile=/tmp/supervisor_EuroAuto_create-order.log
+stdout_logfile=/tmp/supervisor_systo_create-order.log
+
+
+[program:laravel-worker-friendly]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/friendly/artisan queue:work
+autostart=true
+autorestart=true
+user=user
+numprocs=1
+timeout=60*60
+redirect_stderr=true
+stdout_logfile=/tmp/supervisor_friendly_create-order.log
