--- a/Friendly/.env.example
+++ b/Friendly/.env.example
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
+DB_HOST=database
+DB_PORT=3307
 DB_DATABASE=friendly
 DB_USERNAME=root
-DB_PASSWORD=secret
+DB_PASSWORD=common404
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
