--- a/Docker/worker/conf/supervisord.conf
+++ b/Docker/worker/conf/supervisord.conf
@@ -26,3 +26,14 @@ numprocs=1
 timeout=60*60
 redirect_stderr=true
 stdout_logfile=/tmp/supervisor_friendly_create-order.log
+
+[program:laravel-worker-list]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/list/artisan queue:work
+autostart=true
+autorestart=true
+user=user
+numprocs=1
+timeout=60*60
+redirect_stderr=true
+stdout_logfile=/tmp/supervisor_list_create-order.log
