--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -26,7 +26,7 @@ server {
 
 server {
     listen 8083;
-    server_name     org.solarsysto.ru api.solarsysto.ru api.tickets.loc org.tickets.loc;
+    server_name     org.solarsysto.ru api.solarsysto.ru api.tickets.loc org.tickets.loc baza.tickets.loc baza.spaceofjoy.ru;
     return 301 https://$host$request_uri;
 }
 
@@ -48,8 +48,10 @@ server {
 }
 
 server {
-    listen          8083;
+    listen          8443 ssl;
     server_name     baza.tickets.loc baza.spaceofjoy.ru;
+    ssl_certificate ssl/fullchain2.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey2.pem;
 
     root /var/baza/public;
     index index.php index.html;
