--- a/Docker/php/Dockerfile
+++ b/Docker/php/Dockerfile
@@ -40,8 +40,8 @@ COPY vhost.conf /etc/apache2/sites-available/000-default.conf
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 #xdebug
-#RUN pecl install xdebug \
-#    && docker-php-ext-enable xdebug
+RUN pecl install xdebug \
+    && docker-php-ext-enable xdebug
 
 
 #Redis
