--- a/Docker/worker/conf/supervisord.conf
+++ b/Docker/worker/conf/supervisord.conf
@@ -6,7 +6,7 @@ pidfile=/tmp/supervisord.pid
 
 [program:laravel-worker-systo]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/html/artisan queue:work
+command=php /var/www/html/artisan queue:work --tries=3 --timeout=60
 autostart=true
 autorestart=true
 user=user
@@ -18,7 +18,7 @@ stdout_logfile=/tmp/supervisor_systo_create-order.log
 
 [program:laravel-worker-friendly]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/friendly/artisan queue:work
+command=php /var/friendly/artisan queue:work --tries=3 --timeout=60
 autostart=true
 autorestart=true
 user=user
@@ -29,7 +29,7 @@ stdout_logfile=/tmp/supervisor_friendly_create-order.log
 
 [program:laravel-worker-list]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/list/artisan queue:work
+command=php /var/list/artisan queue:work --tries=3 --timeout=60
 autostart=true
 autorestart=true
 user=user
