--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -49,7 +49,7 @@ server {
 
 server {
     listen          8443 ssl;
-    server_name     baza.tickets.loc baza.spaceofjoy.ru;
+    server_name     baza.tickets.loc enter.spaceofjoy.ru;
     ssl_certificate ssl/fullchain2.pem; # managed by Certbot
     ssl_certificate_key ssl/privkey2.pem;
 
