--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -26,7 +26,7 @@ server {
 
 server {
     listen 8083;
-    server_name     org.solarsysto.ru api.solarsysto.ru api.tickets.loc org.tickets.loc baza.tickets.loc baza.spaceofjoy.ru;
+    server_name     org.solarsysto.ru api.solarsysto.ru api.tickets.loc org.tickets.loc baza.tickets.loc enter.spaceofjoy.ru;
     return 301 https://$host$request_uri;
 }
 
