add ssl in vhod

--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -1,8 +1,8 @@
 server {
     listen          8443 ssl;
     server_name     api.solarsysto.ru api.tickets.loc;
-    ssl_certificate ssl/fullchain2.pem; # managed by Certbot
-    ssl_certificate_key ssl/privkey2.pem;
+    ssl_certificate ssl/fullchain3.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey3.pem;
     # Set the document root of the project
     root /var/www/html/public;
     index           index.php;
@@ -34,8 +34,8 @@ server {
     # Set the port to listen on and the server name
     listen          8443 ssl;
     server_name     org.solarsysto.ru org.tickets.loc;
-    ssl_certificate ssl/fullchain2.pem; # managed by Certbot
-    ssl_certificate_key ssl/privkey2.pem;
+    ssl_certificate ssl/fullchain3.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey3.pem;
     # Specify the default character set
     charset utf-8;
 
@@ -49,9 +49,9 @@ server {
 
 server {
     listen          8443 ssl;
-    server_name     baza.tickets.loc vhod.spaceofjoy.ru;
-    ssl_certificate ssl/fullchain2.pem; # managed by Certbot
-    ssl_certificate_key ssl/privkey2.pem;
+    server_name     baza.tickets.loc vhod.spaceofjoy.ru vhod.solarsysto.ru;
+    ssl_certificate ssl/fullchain4.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey4.pem;
 
     root /var/baza/public;
     index index.php index.html;
