--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -1,8 +1,18 @@
+
+
+
+#server {
+#    listen 8083;
+##    server_name     org.solarsysto.ru api.solarsysto.ru api.tickets.loc org.tickets.loc baza.tickets.loc vhod.spaceofjoy.ru;
+#    return 301 https://$host$request_uri;
+#}
+
+######### org ##########################
+# api
 server {
-    listen          8443 ssl;
+    listen          8083;
     server_name     api.solarsysto.ru api.tickets.loc;
-    ssl_certificate ssl/fullchain3.pem; # managed by Certbot
-    ssl_certificate_key ssl/privkey3.pem;
+
     # Set the document root of the project
     root /var/www/html/public;
     index           index.php;
@@ -13,7 +23,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass ${ENV_ORG_BACKEND_HOST}:9000;
         fastcgi_index index.php?$args;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -24,12 +34,7 @@ server {
 
 }
 
-server {
-    listen 8083;
-    server_name     org.solarsysto.ru api.solarsysto.ru api.tickets.loc org.tickets.loc baza.tickets.loc vhod.spaceofjoy.ru;
-    return 301 https://$host$request_uri;
-}
-
+# front
 server {
     # Set the port to listen on and the server name
     listen          8443 ssl;
@@ -47,6 +52,10 @@ server {
     }
 }
 
+
+
+
+########## vhod ##########################
 server {
     listen          8443 ssl;
     server_name     baza.tickets.loc vhod.spaceofjoy.ru vhod.solarsysto.ru;
@@ -62,7 +71,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass phpBaza:9000;
+        fastcgi_pass ${ENV_VHOD_BACKEND_HOST}:9000;
         fastcgi_index index.php?$args;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME /var/baza/public$fastcgi_script_name;
@@ -71,7 +80,7 @@ server {
         fastcgi_buffers 4 16k;
     }
 }
-
+######### drug ##########################
 server {
     listen          8083;
     server_name     drug.solarsysto.ru drug.tickets.loc;
@@ -85,7 +94,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass phpFriendly:9000;
+        fastcgi_pass ${ENV_DRUG_BACKEND_HOST}:9000;
         fastcgi_index index.php?$args;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME /var/friendly/public$fastcgi_script_name;
@@ -94,7 +103,7 @@ server {
         fastcgi_buffers 4 16k;
     }
 }
-
+################ spisok ###############
 server {
     listen          8083;
     server_name     spisok.solarsysto.ru spisok.tickets.loc;
@@ -108,7 +117,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass phpList:9000;
+        fastcgi_pass ${ENV_SPISOK_BACKEND_HOST}:9000;
         fastcgi_index index.php?$args;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME /var/list/public$fastcgi_script_name;
