--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "80:8083"
       - "443:8443"
     volumes:
-      - ./Docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./Docker/nginx/default.conf:/etc/nginx/conf.d/default.conf.template
       - ./Docker/nginx/ssl:/etc/nginx/ssl
       - ./Docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./Docker/nginx/proxy_params:/etc/nginx/proxy_params
@@ -19,6 +19,11 @@ services:
       - ./Friendly:/var/friendly
       - ./List:/var/list
     user: user
+    environment:
+      - ENV_ORG_BACKEND_HOST=php
+      - ENV_VHOD_BACKEND_HOST=php.vhod
+      - ENV_DRUG_BACKEND_HOST=php.drug
+      - ENV_SPISOK_BACKEND_HOST=php.spisok
     networks:
       - backend
     links:
@@ -30,6 +35,7 @@ services:
       - php
 
   php:
+    hostname: php.org
     build:
       context: ./Docker/php
     image: 'laravelapp'
@@ -43,7 +49,9 @@ services:
     networks:
       - backend
 
+
   phpBaza:
+    hostname: php.vhod
     build:
       context: ./Docker/phpBaza
     image: 'laravelbaza'
@@ -57,6 +65,7 @@ services:
       - backend
 
   phpFriendly:
+    hostname: php.drug
     build:
       context: ./Docker/phpFriendly
     image: 'laravelfrendly'
@@ -70,6 +79,7 @@ services:
       - backend
 
   phpList:
+    hostname: php.spisok
     build:
       context: ./Docker/phpList
     image: 'laravellist'
