--- a/Docker/php/xdebug.ini
+++ b/Docker/php/xdebug.ini
@@ -1,6 +1,6 @@
-zend_extension=xdebug
+zend_extension=xdebug.so
 
 [xdebug]
 xdebug.mode=develop,debug
-xdebug.client_host=host.docker.internal
+xdebug.client_host=172.17.0.1
 xdebug.start_with_request=yes
