--- a/Docker/nginx/default.dev.conf
+++ b/Docker/nginx/default.dev.conf
@@ -1,16 +1,16 @@
 
 
 
-server {
-    listen 8083;
-    server_name     org.solarsysto.ru api.solarsysto.ru api.tickets.loc org.tickets.loc baza.tickets.loc vhod.spaceofjoy.ru;
-    return 301 https://$host$request_uri;
-}
+#server {
+#    listen 8083;
+##    server_name     org.solarsysto.ru api.solarsysto.ru api.tickets.loc org.tickets.loc baza.tickets.loc vhod.spaceofjoy.ru;
+#    return 301 https://$host$request_uri;
+#}
 
 ######### org ##########################
 # api
 server {
-    listen          8443 ssl;
+    listen          8083;
     server_name     api.solarsysto.ru api.tickets.loc;
 
     # Set the document root of the project
@@ -37,7 +37,7 @@ server {
 # front
 server {
     # Set the port to listen on and the server name
-    listen          8443 ssl;
+    listen           8083;
     server_name     org.solarsysto.ru org.tickets.loc;
     ssl_certificate ssl/fullchain3.pem; # managed by Certbot
     ssl_certificate_key ssl/privkey3.pem;
@@ -57,7 +57,7 @@ server {
 
 ########## vhod ##########################
 server {
-    listen          8443 ssl;
+    listen          8083;
     server_name     baza.tickets.loc vhod.spaceofjoy.ru vhod.solarsysto.ru;
     ssl_certificate ssl/fullchain4.pem; # managed by Certbot
     ssl_certificate_key ssl/privkey4.pem;
