--- a/Docker/php/vhost.conf
+++ b/Docker/php/vhost.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-    DocumentRoot /var/www/html/public
+    DocumentRoot ${HOME}/public
 
-    <Directory "/var/www/html">
+    <Directory "${HOME}">
         AllowOverride all
         Require all granted
     </Directory>
