--- a/Docker/php/Dockerfile
+++ b/Docker/php/Dockerfile
@@ -29,6 +29,7 @@ RUN apt-get update && apt-get install -y \
         && docker-php-source delete
 
 COPY vhost.conf /etc/apache2/sites-available/000-default.conf
+COPY error_reporting.ini /usr/local/etc/php/conf.d/error_reporting.ini
 
 #composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
