--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,27 @@ services:
       - ./Docker/nginx/ssl:/etc/nginx/ssl
       - ./Docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./Docker/nginx/proxy_params:/etc/nginx/proxy_params
-      - ./Backend:/var/www/html
-      - ./FrontEnd:/var/app/
-      - ./Baza:/var/baza/
-      - ./Friendly:/var/friendly
-      - ./List:/var/list
+      - ./Backend:${ENV_ORG_BACKEND_PATCH}
+      - ./FrontEnd:${ENV_ORG_FRONT_PATCH}
+      - ./Shared:${ENV_SHARED_PATCH}
+      - ./Baza:${ENV_VHOD_PATCH}
+      - ./Friendly:${ENV_DRUG_PATCH}
+      - ./List:${ENV_SPISOK_PATCH}
     user: user
     environment:
-      - ENV_ORG_BACKEND_HOST=php
-      - ENV_VHOD_BACKEND_HOST=php.vhod
-      - ENV_DRUG_BACKEND_HOST=php.drug
-      - ENV_SPISOK_BACKEND_HOST=php.spisok
+      - ENV_ORG_BACKEND_HOST=${ENV_ORG_BACKEND_HOST}
+      - ENV_ORG_FRONTEND_HOST=${ENV_ORG_FRONTEND_HOST}
+      - ENV_VHOD_BACKEND_HOST=${ENV_VHOD_BACKEND_HOST}
+      - ENV_DRUG_BACKEND_HOST=${ENV_DRUG_BACKEND_HOST}
+      - ENV_SPISOK_BACKEND_HOST=${ENV_SPISOK_BACKEND_HOST}
+
+      - ENV_ORG_BACKEND_PATCH=${ENV_ORG_BACKEND_PATCH}
+      - ENV_ORG_FRONT_PATCH=${ENV_ORG_FRONT_PATCH}
+      - ENV_SHARED_PATCH=${ENV_SHARED_PATCH}
+      - ENV_VHOD_PATCH=${ENV_VHOD_PATCH}
+      - ENV_DRUG_PATCH=${ENV_DRUG_PATCH}
+      - ENV_SPISOK_PATCH=${ENV_SPISOK_PATCH}
+
     networks:
       - backend
     links:
@@ -35,63 +45,82 @@ services:
       - php
 
   php:
-    hostname: php.org
+    hostname: ${ENV_ORG_BACKEND_HOST}
     image: php:systo
     env_file:
       - ./Backend/.env
     container_name: php-solarSysto
     volumes:
-      - ./Backend:/var/www/html
-      - ./Docker/php/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
-    working_dir: /var/www/html
+      - ./Shared:${ENV_SHARED_PATCH}
+      - ./Backend:${ENV_ORG_BACKEND_PATCH}
+    working_dir: ${ENV_ORG_BACKEND_PATCH}
     user: user
     environment:
       - WITH_XDEBUG=true
-      - WORKING_DIR=/var/www/html
+      - WORKING_DIR=${ENV_ORG_BACKEND_PATCH}
+    networks:
+      - backend
+
+  node:
+    hostname: ${ENV_ORG_FRONTEND_HOST}
+    build:
+      context: ./Docker/node
+    working_dir: ${ENV_ORG_FRONT_PATCH}
+    ports:
+      - "8081:8080"
+    container_name: node-solarSysto
+    volumes:
+      - ./FrontEnd:${ENV_ORG_FRONT_PATCH}
+    command: tail -f /dev/null
+    user: node
     networks:
       - backend
 
   phpBaza:
-    hostname: php.vhod
+    hostname: ${ENV_VHOD_BACKEND_HOST}
     image: php:systo
     container_name: php-baza
+    env_file:
+      - ./Baza/.env
     volumes:
-      - ./Baza:/var/baza
-      - ./Docker/php/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
-    working_dir: /var/baza
+      - ./Baza:${ENV_VHOD_PATCH}
+      - ./Shared:${ENV_SHARED_PATCH}
+    working_dir: ${ENV_VHOD_PATCH}
     user: user
     environment:
       - WITH_XDEBUG=true
-      - WORKING_DIR=/var/baza
+      - WORKING_DIR=${ENV_VHOD_PATCH}
     networks:
       - backend
 
   phpFriendly:
-    hostname: php.drug
+    hostname: ${ENV_DRUG_BACKEND_HOST}
     image: php:systo
     container_name: php-friendly
+    env_file:
+      - ./Friendly/.env
     volumes:
-      - ./Friendly:/var/friendly
-      - ./Docker/php/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
-    working_dir: /var/friendly/html
+      - ./Friendly:${ENV_DRUG_PATCH}
+      - ./Shared:${ENV_SHARED_PATCH}
+    working_dir: ${ENV_DRUG_PATCH}
     environment:
       - WITH_XDEBUG=true
-      - WORKING_DIR=/var/friendly
+      - WORKING_DIR=${ENV_DRUG_PATCH}
     user: user
     networks:
       - backend
 
   phpList:
-    hostname: php.spisok
+    hostname: ${ENV_SPISOK_BACKEND_HOST}
     image: php:systo
     container_name: php-list
     volumes:
-      - ./List:/var/list
-      - ./Docker/php/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
-    working_dir: /var/list
+      - ./List:${ENV_SPISOK_PATCH}
+      - ./Shared:${ENV_SHARED_PATCH}
+    working_dir: ${ENV_SPISOK_PATCH}
     environment:
       - WITH_XDEBUG=true
-      - WORKING_DIR=/var/list
+      - WORKING_DIR=${ENV_SPISOK_PATCH}
     user: user
     networks:
       - backend
@@ -105,29 +134,14 @@ services:
     networks:
       - backend
 
-  node:
-    build:
-      context: ./Docker/node
-    working_dir: /var/app
-    ports:
-      - "8081:8080"
-    container_name: node-solarSysto
-    volumes:
-      - ./FrontEnd:/var/app
-    command: tail -f /dev/null
-    user: node
-    networks:
-      - backend
-
   worker:
     build:
       context: ./Docker/worker
     image: 'laravelworker'
     volumes:
-      - ./Backend:/var/www/html
-      - ./Friendly:/var/friendly
-      - ./List:/var/list
-      - ./Docker/php/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ./Backend:${ENV_ORG_BACKEND_PATCH}
+      - ./Friendly:${ENV_DRUG_PATCH}
+      - ./List:${ENV_SPISOK_PATCH}
       - ./Docker/php/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
       - ./Docker/worker/conf/supervisord.conf:/etc/supervisor/conf.d/supervisord.conf
     user: user
