--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -14,7 +14,7 @@ server {
     server_name     api.solarsysto.ru api.tickets.loc;
 
     # Set the document root of the project
-    root /var/www/html/public;
+    root ${ENV_ORG_BACKEND_PATCH}/public;
     index           index.php;
 
     location / {
@@ -46,7 +46,7 @@ server {
 
     location / {
         # Set the document root of the project
-        root /var/app/dist;
+        root ${ENV_ORG_FRONT_PATCH}/dist;
         # Set the directory index files
         try_files $uri $uri/ /index.html;
     }
@@ -62,7 +62,7 @@ server {
     ssl_certificate ssl/fullchain4.pem; # managed by Certbot
     ssl_certificate_key ssl/privkey4.pem;
 
-    root /var/baza/public;
+    root ${ENV_VHOD_PATCH}/public;
     index index.php index.html;
 
     location / {
@@ -74,7 +74,7 @@ server {
         fastcgi_pass ${ENV_VHOD_BACKEND_HOST}:9000;
         fastcgi_index index.php?$args;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /var/baza/public$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME ${ENV_VHOD_PATCH}/public$fastcgi_script_name;
         fastcgi_intercept_errors off;
         fastcgi_buffer_size 16k;
         fastcgi_buffers 4 16k;
@@ -85,7 +85,7 @@ server {
     listen          8083;
     server_name     drug.solarsysto.ru drug.tickets.loc;
 
-    root /var/friendly/public;
+    root ${ENV_DRUG_PATCH}/public;
     index index.php index.html;
 
     location / {
@@ -97,7 +97,7 @@ server {
         fastcgi_pass ${ENV_DRUG_BACKEND_HOST}:9000;
         fastcgi_index index.php?$args;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /var/friendly/public$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME ${ENV_DRUG_PATCH}/public$fastcgi_script_name;
         fastcgi_intercept_errors off;
         fastcgi_buffer_size 16k;
         fastcgi_buffers 4 16k;
@@ -108,7 +108,7 @@ server {
     listen          8083;
     server_name     spisok.solarsysto.ru spisok.tickets.loc;
 
-    root /var/list/public;
+    root ${ENV_SPISOK_PATCH}/public;
     index index.php index.html;
 
     location / {
@@ -120,7 +120,7 @@ server {
         fastcgi_pass ${ENV_SPISOK_BACKEND_HOST}:9000;
         fastcgi_index index.php?$args;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /var/list/public$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME ${ENV_SPISOK_PATCH}/public$fastcgi_script_name;
         fastcgi_intercept_errors off;
         fastcgi_buffer_size 16k;
         fastcgi_buffers 4 16k;
