--- a/Docker/nginx/default.dev.conf
+++ b/Docker/nginx/default.dev.conf
@@ -57,7 +57,7 @@ server {
 
 ########## vhod ##########################
 server {
-    listen          8083;
+    listen          8443 ssl;
     server_name     baza.tickets.loc vhod.spaceofjoy.ru vhod.solarsysto.ru;
     ssl_certificate ssl/fullchain4.pem; # managed by Certbot
     ssl_certificate_key ssl/privkey4.pem;
