--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,7 +9,7 @@ services:
       - "80:8083"
       - "443:8443"
     volumes:
-      - ./Docker/nginx/default.dev.conf:/etc/nginx/conf.d/default.conf.template
+      - ./Docker/nginx/default.conf:/etc/nginx/conf.d/default.conf.template
       - ./Docker/nginx/ssl:/etc/nginx/ssl
       - ./Docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./Docker/nginx/proxy_params:/etc/nginx/proxy_params
