--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -1,6 +1,3 @@
-
-
-
 server {
     listen 8083;
     server_name     org.solarsysto.ru api.solarsysto.ru api.tickets.loc org.tickets.loc baza.tickets.loc vhod.spaceofjoy.ru;
@@ -12,6 +9,8 @@ server {
 server {
     listen          8443 ssl;
     server_name     api.solarsysto.ru api.tickets.loc;
+    ssl_certificate ssl/fullchain3.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey3.pem;
 
     # Set the document root of the project
     root ${ENV_ORG_BACKEND_PATCH}/public;
