--- a/List/.env.example
+++ b/List/.env.example
@@ -48,3 +48,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+UUID_FESTIVAL='9d679bcf-b438-4ddb-ac04-023fa9bff4b2'
+UUID_SECOND_FESTIVAL='9d679bcf-b438-4ddb-ac04-023fa9bff4b3'
