--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -36,7 +36,8 @@ server {
 # front
 server {
     # Set the port to listen on and the server name
-    listen          8443 ssl;
+    #listen          8443 ssl;
+    listen          8083;
     server_name     org.solarsysto.ru org.tickets.loc;
     ssl_certificate ssl/fullchain3.pem; # managed by Certbot
     ssl_certificate_key ssl/privkey3.pem;
