редирект на http

--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -14,7 +14,8 @@ server {
 ######### org ##########################
 # api
 server {
-    listen          8443 ssl;
+    #isten          8443 ssl;
+    listen 8083;
     server_name     api.solarsysto.ru api.tickets.loc;
     ssl_certificate ssl/fullchain3.pem; # managed by Certbot
     ssl_certificate_key ssl/privkey3.pem;
