редирект на http

--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -12,8 +12,8 @@ server {
     #isten          8443 ssl;
     listen 8083;
     server_name     api.solarsysto.ru api.tickets.loc;
-    ssl_certificate ssl/fullchain3.pem; # managed by Certbot
-    ssl_certificate_key ssl/privkey3.pem;
+    #ssl_certificate ssl/fullchain3.pem; # managed by Certbot
+    #ssl_certificate_key ssl/privkey3.pem;
 
     # Set the document root of the project
     root ${ENV_ORG_BACKEND_PATCH}/public;
@@ -42,8 +42,8 @@ server {
     #listen          8443 ssl;
     listen          8083;
     server_name     org.solarsysto.ru org.tickets.loc;
-    ssl_certificate ssl/fullchain3.pem; # managed by Certbot
-    ssl_certificate_key ssl/privkey3.pem;
+    #ssl_certificate ssl/fullchain3.pem; # managed by Certbot
+    #ssl_certificate_key ssl/privkey3.pem;
     # Specify the default character set
     charset utf-8;
 
@@ -62,8 +62,8 @@ server {
 server {
     listen          8443 ssl;
     server_name     baza.tickets.loc vhod.spaceofjoy.ru vhod.solarsysto.ru;
-    ssl_certificate ssl/fullchain4.pem; # managed by Certbot
-    ssl_certificate_key ssl/privkey4.pem;
+    #ssl_certificate ssl/fullchain4.pem; # managed by Certbot
+    #ssl_certificate_key ssl/privkey4.pem;
 
     root ${ENV_VHOD_PATCH}/public;
     index index.php index.html;
