--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -1,6 +1,6 @@
 
 server {
-    listen 8443;
+    listen 8443 ssl;
     server_name     org.solarsysto.ru api.solarsysto.ru;
     return 301 http://$host$request_uri;
 }
