редирект на http

--- a/Docker/nginx/default.dev.conf
+++ b/Docker/nginx/default.dev.conf
@@ -1,5 +1,11 @@
 
 
+server {
+    listen 8443 ssl;
+    server_name     org.solarsysto.ru api.solarsysto.ru;
+    return 301 http://$host$request_uri;
+}
+
 
 #server {
 #    listen 8083;
