--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -1,19 +1,16 @@
-
 server {
-    listen 8443 ssl;
-    server_name     org.solarsysto.ru api.solarsysto.ru;
-    return 301 http://$host$request_uri;
+    listen 8083;
+    server_name     org.solarsysto.ru api.solarsysto.ru api.tickets.loc org.tickets.loc baza.tickets.loc vhod.spaceofjoy.ru;
+    return 301 https://$host$request_uri;
 }
-
 
 ######### org ##########################
 # api
 server {
-    #isten          8443 ssl;
-    listen 8083;
+    listen          8443 ssl;
     server_name     api.solarsysto.ru api.tickets.loc;
-    #ssl_certificate ssl/fullchain3.pem; # managed by Certbot
-    #ssl_certificate_key ssl/privkey3.pem;
+    ssl_certificate ssl/fullchain3.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey3.pem;
 
     # Set the document root of the project
     root ${ENV_ORG_BACKEND_PATCH}/public;
@@ -39,11 +36,10 @@ server {
 # front
 server {
     # Set the port to listen on and the server name
-    #listen          8443 ssl;
-    listen          8083;
+    listen          8443 ssl;
     server_name     org.solarsysto.ru org.tickets.loc;
-    #ssl_certificate ssl/fullchain3.pem; # managed by Certbot
-    #ssl_certificate_key ssl/privkey3.pem;
+    ssl_certificate ssl/fullchain3.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey3.pem;
     # Specify the default character set
     charset utf-8;
 
@@ -59,30 +55,30 @@ server {
 
 
 ########## vhod ##########################
-#server {
-#    listen          8443 ssl;
-#    server_name     baza.tickets.loc vhod.spaceofjoy.ru vhod.solarsysto.ru;
-    #ssl_certificate ssl/fullchain4.pem; # managed by Certbot
-    #ssl_certificate_key ssl/privkey4.pem;
+server {
+    listen          8443 ssl;
+    server_name     baza.tickets.loc vhod.spaceofjoy.ru vhod.solarsysto.ru;
+    ssl_certificate ssl/fullchain4.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey4.pem;
 
-#    root ${ENV_VHOD_PATCH}/public;
-#    index index.php index.html;
+    root ${ENV_VHOD_PATCH}/public;
+    index index.php index.html;
 
-#    location / {
-#        try_files $uri /index.php$is_args$query_string;
-#    }
+    location / {
+        try_files $uri /index.php$is_args$query_string;
+    }
 
-#    location ~ \.php$ {
-#        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-###        fastcgi_pass ${ENV_VHOD_BACKEND_HOST}:9000;
-#        fastcgi_index index.php?$args;
-#        include fastcgi_params;
-##        fastcgi_param SCRIPT_FILENAME ${ENV_VHOD_PATCH}/public$fastcgi_script_name;
-#        fastcgi_intercept_errors off;
-#        fastcgi_buffer_size 16k;
-#        fastcgi_buffers 4 16k;
-#    }
-#}
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass ${ENV_VHOD_BACKEND_HOST}:9000;
+        fastcgi_index index.php?$args;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME ${ENV_VHOD_PATCH}/public$fastcgi_script_name;
+        fastcgi_intercept_errors off;
+        fastcgi_buffer_size 16k;
+        fastcgi_buffers 4 16k;
+    }
+}
 ######### drug ##########################
 server {
     listen          8083;
