--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -39,6 +39,7 @@ services:
     links:
       - mysql
       - node
+      - phpBaza
       - phpFriendly
       - phpList
       - php
@@ -76,6 +77,27 @@ services:
       - ./FrontEnd:${ENV_ORG_FRONT_PATCH}
     command: tail -f /dev/null
     user: node
+    networks:
+      - backend
+
+  phpBaza:
+    hostname: ${ENV_VHOD_BACKEND_HOST}
+    build:
+      context: ./Docker/php
+      args:
+        - WITH_XDEBUG=false
+    container_name: php-baza
+    image: 'baza_laravel'
+    env_file:
+      - ./Baza/.env
+    volumes:
+      - ./Baza:/var/www/vhod
+      - ./Shared:${ENV_SHARED_PATCH}
+    working_dir: ${ENV_VHOD_PATCH}
+    user: user
+    environment:
+      - WITH_XDEBUG=false
+      - WORKING_DIR=${ENV_VHOD_PATCH}
     networks:
       - backend
 
