--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -9,8 +9,8 @@ server {
 server {
     listen          8443 ssl;
     server_name     api.solarsysto.ru api.tickets.loc;
-    ssl_certificate ssl/fullchain3.pem; # managed by Certbot
-    ssl_certificate_key ssl/privkey3.pem;
+    ssl_certificate ssl/fullchain.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey.pem;
 
     # Set the document root of the project
     root ${ENV_ORG_BACKEND_PATCH}/public;
@@ -38,8 +38,8 @@ server {
     # Set the port to listen on and the server name
     listen          8443 ssl;
     server_name     org.solarsysto.ru org.tickets.loc;
-    ssl_certificate ssl/fullchain3.pem; # managed by Certbot
-    ssl_certificate_key ssl/privkey3.pem;
+    ssl_certificate ssl/fullchain.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey.pem;
     # Specify the default character set
     charset utf-8;
 
@@ -58,8 +58,8 @@ server {
 server {
     listen          8443 ssl;
     server_name     baza.tickets.loc vhod.spaceofjoy.ru vhod.solarsysto.ru;
-    ssl_certificate ssl/fullchain4.pem; # managed by Certbot
-    ssl_certificate_key ssl/privkey4.pem;
+    ssl_certificate ssl/fullchain.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey.pem;
 
     root ${ENV_VHOD_PATCH}/public;
     index index.php index.html;
