--- a/Docker/nginx/default.dev.conf
+++ b/Docker/nginx/default.dev.conf
@@ -48,6 +48,8 @@ server {
         root ${ENV_ORG_FRONT_PATCH}/dist;
         # Set the directory index files
         try_files $uri $uri/ /index.html;
+        auth_basic "Restricted area";
+        auth_basic_user_file /etc/nginx/auth.basic;
     }
 }
 
