--- a/Docker/nginx/Dockerfile
+++ b/Docker/nginx/Dockerfile
@@ -5,6 +5,9 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN adduser --disabled-password --gecos "" user
 
+RUN apt-get update && apt-get install -y \
+    apache2-utils
+
 RUN touch /var/run/nginx.pid \
     && mkdir /socket \
     && mkdir /etc/nginx/ssl \
