drug фикс nginx

--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -4,6 +4,13 @@ server {
     return 301 https://$host$request_uri;
 }
 
+
+server {
+    listen 8083;
+    server_name     drug.solarsysto.ru drug.tickets.loc;
+    return 301 http://$host$request_uri;
+}
+
 ######### org ##########################
 # api
 server {
