--- a/Docker/nginx/default.dev.conf
+++ b/Docker/nginx/default.dev.conf
@@ -4,6 +4,14 @@ server {
     return 301 https://$host$request_uri;
 }
 
+server {
+    listen 8443 ssl;
+    server_name     drug.solarsysto.ru drug.tickets.loc;
+    ssl_certificate ssl/fullchain.pem; # managed by Certbot
+    ssl_certificate_key ssl/privkey.pem;
+    return 301 http://$host$request_uri;
+}
+
 ######### org ##########################
 # api
 server {
