[ngnix] fix drug

--- a/Docker/nginx/default.dev.conf
+++ b/Docker/nginx/default.dev.conf
@@ -74,7 +74,7 @@ server {
     listen          8083;
     server_name     drug.spaceofjoy.ru drug.tickets.loc;
 
-    root ${ENV_DRUG_PATCH}/public;
+    root /var/www/drug/public;
     index index.php index.html;
 
     location / {
@@ -83,7 +83,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass ${ENV_DRUG_BACKEND_HOST}:9000;
+        fastcgi_pass php.drug:9000;
         fastcgi_index index.php?$args;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME ${ENV_DRUG_PATCH}/public$fastcgi_script_name;
